src/css/style.scss
$colors_primaryColor: #195B8B;
$colors_primaryColor2: #88C0E8;
$colors_secondaryColor: #F0F7FC;
$colors_accentColor: #FF5252;
$colors_primaryTextColor1: #FFFFFF;
$colors_primaryTextColor2: #000000;
$colors_secondaryTextColor: #555555;
$colors_linkColor: #003359;
$colors_iconColor: #9B9B9B;
$colors_backgroundColor1: #CCCCCC;
$colors_backgroundColor2: #EEEEEE;
$colors_backgroundColor3: #FAFAFA;
$colors_primaryTextColor1Alpha: rgba($colors_primaryTextColor1, .87);

html {
  /*overflow-y: scroll;*/

  body {
    background: $colors_backgroundColor1;
  }
}

.slide {
  transition: 0.5s ease all;
  transform-origin: center top;
  overflow: hidden;
}

.slide.ng-hide {
  transform: translateY(-50%);
  opacity: 0;
}

.scAttributes {
  $attributesBackground: $colors_backgroundColor3;
  $taskMetaDataBackground: $colors_backgroundColor2;
  background: $attributesBackground;

  .attributesTable {
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&amp;0.03+0,0+31 */
    background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.03) 0%, rgba(0, 0, 0, 0) 31%, rgba(0, 0, 0, 0) 100%); /* FF3.6-15 */
    background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.03) 0%, rgba(0, 0, 0, 0) 31%, rgba(0, 0, 0, 0) 100%); /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.03) 0%, rgba(0, 0, 0, 0) 31%, rgba(0, 0, 0, 0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#08000000', endColorstr='#00000000', GradientType=0); /* IE6-9 */

  }

  .md-tab:not(.md-active) {
    background: $colors_backgroundColor2
  }

  md-input-container {
    padding-bottom: inherit;
  }

  .newTaskAttributeForm md-input-container {
    margin: 0;
  }

  .attributeValueForm > *, .metadataForm dd > * {
    padding: 0;
    margin: 0;
  }

  md-datepicker {
    background: $attributesBackground;
  }

  .metadataTitle {
    text-align: center;
  }

  .metadataTable {
    background: $taskMetaDataBackground;
    padding: 16px;
    padding-left: 12px;
    margin-left: 16px;

    dl {
      margin: 0;
    }

    dt {
      margin-top: 1em;
    }

    md-datepicker {
      background: $taskMetaDataBackground;
    }
  }
}

.attributesTable {
  font-size: 90%;

  & > * {
    padding-left: 16px;
    padding-right: 16px;

    &:last-child {
      padding-bottom: 16px;
    }
  }

  dd {
    margin-left: 20px;
  }

  .attributeValueList li:not(:first-child) {
    padding-top: 5px;
  }

  .attributesName {
    font-style: italic;
    color: rgba($colors_secondaryTextColor, .55);
    font-size: 90%;
  }

  md-menu {
    padding: 8px 0 0;
  }

  .attributesValue {
    padding-left: 10px;
  }

  td {
    // vertical-align: initial;
    vertical-align: top;
  }

  md-icon {
    cursor: pointer;
  }
}

ul.attributeValueList {
  list-style: none;
  margin: 0;
  padding: 0;
}

.withoutTopAndBottomPadding {
  padding-top: 0;
  padding-bottom: 0;
}

.childsHaveNoPadding > *, .childsHaveNoPadding > *.flex {
  padding: 0;
}

.childsHaveNoPadding.layout-margin > .flex-gt-md {
  margin: 8px;
}

a {
  color: $colors_linkColor;
}

.md-sidenav-left {
  //ul.sideNavFlat {
  //  list-style: none;
  //  padding: 0;
  //  margin: 0;
  //  background: $colors_backgroundColor2;
  //
  //  li.active {
  //    background: $colors_accentColor;
  //
  //    & > a {
  //      color: $colors_primaryTextColor1;
  //      background: $colors_primaryColor;
  //    }
  //  }
  //
  //  li.anotherLevel {
  //    border-bottom: 2px solid $colors_backgroundColor2;
  //  }
  //
  //  li[data-hierarchy-level="0"] {
  //    padding-left: 3px;
  //  }
  //}

  ul > li > span {
    display: block;
    a {
      $padding: 10px;
      display: block;
      padding: $padding $padding $padding 40px;
      background: $colors_backgroundColor3;
      text-decoration: none;
      font-weight: bold;
      color: $colors_primaryColor;
    }
  }

  ul.sideNav {
    background: $colors_backgroundColor2;

    &, ul {
      border: 0 solid $colors_backgroundColor2;
      border-top-width: 3px;
      border-bottom-width: 3px;
    }

    li:first-child:last-child > ul {
      border-bottom: none;
    }

    &, ul, li {
      padding: 0;
      margin: 0;
      list-style: none;
    }

    li.active > span {
      background: $colors_accentColor;

      a {
        color: $colors_primaryTextColor1Alpha;
        background: $colors_primaryColor;
      }
    }
  }
}

#header {
  background: $colors_primaryColor;

  color: $colors_primaryTextColor1Alpha;

  padding-top: 10px;

  a {
    text-decoration: none;
    color: $colors_primaryTextColor1Alpha;
  }

  & > h1 {
    margin: 0;
  }

  h1 {
    width: 304px;
    text-align: center;
  }

  h1 img {
    max-width: 100%;
    max-height: 60px;
    opacity: .87;
  }

  #header-actionbar {
    md-autocomplete {
      background: $colors_backgroundColor3;
    }
    md-icon {
      color: $colors_backgroundColor3
    }
  }
}

.content {
  background: $colors_backgroundColor1;
}

md-content.content {
  body > & > div > md-card {
    $border-radius: 3px;
    margin: 25px;
    border-radius: $border-radius;

    md-toolbar {
      border-radius: $border-radius $border-radius 0 0;
    }
  }

}

.withoutPadding {
  padding: 0;
}

.withoutMargin {
  margin: 0;
}

.searchBar {
  margin: 0 10px;
}

.png-icon{
  @media screen and (max-width: 960px) {
    display: inline-flex;
    vertical-align: middle;
    padding-bottom: 5px;
  }
}

.searchHeader {
  background-color: $colors_secondaryColor;
}

.searchSideNav {
  background-color: $colors_backgroundColor3;
  border: 5px solid $colors_backgroundColor2;
}

